# tic_tac_toe

./: .project  README.md  configure.sh
code/: .clang-format  .cproject  CMakeLists.txt
code/src_inc/: .cproject  .project  CMakeLists.txt
code/src_inc/common/: .cproject  .project  CMakeLists.txt  board.hpp
code/src_inc/gui/: .cproject  .project  CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
code/test/: .cproject
code/utilities/: .cproject  .project
